Added ShellPreviewPanel + Added Test usage

--- a/Examples/ShellExplorer/ShellExplorer.csproj
+++ b/Examples/ShellExplorer/ShellExplorer.csproj
@@ -6,7 +6,7 @@
     <ProductVersion>8.0.50727</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{7258B802-D0E5-4268-9C71-3DCC6AF5C2C1}</ProjectGuid>
-    <OutputType>WinExe</OutputType>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>ShellExplorer</RootNamespace>
     <AssemblyName>ShellExplorer</AssemblyName>
